syntax = "proto3";

option csharp_namespace = "Protos.Location";
import "user.proto";

package Location;

service LocatorService {
	rpc RegisterLocation(RegisterLocationRequest) returns (RegisterLocationResponse);
	rpc GetAllLocations(GetAllLocationsRequest) returns (stream UserLocations);
}

message GeoLocation {
	int64 x = 1;
	int64 y = 2;
}

message UserLocations {
	.User.UserModel user = 1;
	repeated GeoLocation locations = 2;
}

message RegisterLocationRequest {
	.User.UserModel user = 1;
	GeoLocation location = 2;
}

message RegisterLocationResponse {
}

message GetAllLocationsRequest {
}